# ingres_chatbot

./: CMakeLists.txt  FOR_RAM_DATABASE_SETUP.md  LICENSE  Makefile  README.md  README_ENHANCED.md  chatbot.c  project_overview.md  quick_test.txt  rough  test_enhanced_queries.txt  test_queries.txt  toolchain.cmake
data/: sample_groundwater_data.c
docs/: REAL_DATA_SOURCES.md
include/: chatbot.h  database.h  intent_patterns.h  utils.h
ingres-react-app/: index.html  package-lock.json  package.json  tailwind.config.js
ingres-react-app/src/: App.tsx  index.css
ingres-react-app/src/components/: Chat.tsx  DataCard.tsx  FloatingActionButton.tsx  GlareHover.css  GlareHover.tsx  Header.tsx  LoadingSpinner.tsx  Message.tsx  NotificationSystem.tsx  Scene.tsx  Sidebar.tsx  StatsPanel.tsx  WaterDroplets.tsx
ingres-react-app/src/store/: chatStore.ts
scripts/: fetch_cgwb_data.py  quick_setup.sh  setup_database.sql
src/: api.c  chatbot.c  database.c  database_real.c  database_stub.c  enhanced_intent_patterns.c  enhanced_response_generator.c  intent_patterns.c  main.c  utils.c  utils_stub.c
web/: ._index.html  ._style.css  index.html  script.js  style.css
